@@ -155,31 +155,28 @@
             </resource>
         </resources>
         <plugins>
-
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <skipTests>${skipUTs}</skipTests>
+                    <argLine>${jacoco-UT-argline}</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.2.201409121644</version>
+                <version>0.7.1.201405082137</version>
                 <executions>
                     <execution>
-                        <id>unit-test-coverage</id>
+                        <id>pre-test</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                         <configuration>
-                            <destFile>${basedir}/target/jacocoUT.exec</destFile>
+                            <destFile>${project.build.directory}/jacocoUT.exec</destFile>
                             <propertyName>jacoco-UT-argline</propertyName>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>integration-test-overage</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <destFile>${basedir}/target/jacocoIT.exec</destFile>
-                            <propertyName>jacoco-IT-argline</propertyName>
                         </configuration>
                     </execution>
                 </executions>
@@ -194,84 +191,7 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
-                    <args>
-                        <arg>-Xmax-classfile-name</arg>
-                        <arg>130</arg>
-                    </args>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <phase>compile</phase>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                        <phase>test-compile</phase>
-                    </execution>
-                    <execution>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
-                <configuration>
-                    <skipTests>${skipUTs}</skipTests>
-                    <argLine>
-                        ${jacoco-UT-argline}
-                        -XX:MaxPermSize=256m
-                        -Dlogback.configurationFile=conf/logger/develop.logger.xml
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18</version>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                        <configuration>
-                            <useSystemClassLoader>false</useSystemClassLoader>
-                            <useManifestOnlyJar>true</useManifestOnlyJar>
-                            <skipTests>${skipITs}</skipTests>
-                            <includes>
-                                <include>**/integration/**/*Spec.*</include>
-                            </includes>
-                            <argLine>
-                                ${jacoco-IT-argline}
-                                -Xmx1024m
-                                -XX:MaxPermSize=256m
-                                -Dlogback.configurationFile=conf/logger/develop.logger.xml
-                                -Djava.security.policy=conf/java.policy
-                                -XX:+HeapDumpOnOutOfMemoryError
-                            </argLine>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!--    <plugin>
+                       <!--    <plugin>
                     <artifactId>crossdata-connector-maven-plugin</artifactId>
                     <groupId>com.stratio.crossdata</groupId>
                     <version>${version.crossdata}</version>
